[gd_scene load_steps=8 format=3 uid="uid://u8j8vphqwugj"]

[ext_resource type="Script" path="res://code/player.gd" id="1_eplxv"]
[ext_resource type="PackedScene" uid="uid://bcfltlggkcjhn" path="res://scenes/wheel.tscn" id="1_o52hd"]
[ext_resource type="Texture2D" uid="uid://bchwmw56po47x" path="res://PhysicsCarGameAssets/Images/Characters/Body.png" id="3_pr3yt"]
[ext_resource type="Texture2D" uid="uid://d2odvcnk0cspf" path="res://PhysicsCarGameAssets/Images/Characters/Head.png" id="4_x6tdb"]
[ext_resource type="Texture2D" uid="uid://de4k236ngvtrs" path="res://PhysicsCarGameAssets/Images/Car/mums car.png" id="5_0vlrx"]
[ext_resource type="AudioStream" uid="uid://qt7kf8d5mdlc" path="res://PhysicsCarGameAssets/Audio/EngineSound.ogg" id="6_1ekn1"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gl6hd"]
radius = 63.1981

[node name="Player" type="RigidBody2D" groups=["player"]]
collision_layer = 2
gravity_scale = 10.0
script = ExtResource("1_eplxv")

[node name="Wheelholder" type="PinJoint2D" parent="."]
position = Vector2(-153, 101)
node_a = NodePath("..")
node_b = NodePath("Wheel")
softness = 1.0

[node name="Wheel" parent="Wheelholder" instance=ExtResource("1_o52hd")]

[node name="Wheelholder2" type="PinJoint2D" parent="."]
position = Vector2(110, 101)
node_a = NodePath("..")
node_b = NodePath("Wheel")
softness = 1.0

[node name="Wheel" parent="Wheelholder2" instance=ExtResource("1_o52hd")]

[node name="Body" type="Sprite2D" parent="."]
position = Vector2(-53, -45)
texture = ExtResource("3_pr3yt")

[node name="Head" type="RigidBody2D" parent="." groups=["player"]]
position = Vector2(-58, -110)
collision_layer = 4
mass = 0.08

[node name="Sprite2D" type="Sprite2D" parent="Head"]
texture = ExtResource("4_x6tdb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
shape = SubResource("CircleShape2D_gl6hd")

[node name="HeadSpring" type="PinJoint2D" parent="Head"]
node_a = NodePath("..")
node_b = NodePath("../..")
softness = 16.0

[node name="NeckJoint" type="PinJoint2D" parent="Head"]
position = Vector2(2, 54)
node_a = NodePath("..")
node_b = NodePath("../..")
softness = 0.55

[node name="Car" type="Sprite2D" parent="."]
texture = ExtResource("5_0vlrx")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(-226, -42, -223, 74, -192, 98, 198, 98, 217, 77, 215, -9, 6, -60, -199, -62)

[node name="GameOverTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="EngineSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_1ekn1")
autoplay = true

[connection signal="timeout" from="GameOverTimer" to="." method="_on_game_over_timer_timeout"]
